# rustikubb

./: Cargo.toml  README.md  rust-toolchain
src/: cli.rs  main.rs  pile.rs  player.rs  solve.rs  tiles.rs  web.rs  web.solver.rs
