[package]
name = "rustikubb"
version = "0.1.0"
authors = ["Matthew Carlson <matthewfcarlson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.10"